# NewsTyper

./: README.md  pyproject.toml
enums/: enums.py
news_crawler/: enums.py  google_news.py  main.py  naver_news.py
newtyper/: __init__.py  main.py
src/contents/: csv_to_data.py  models.py  reader.py
src/db/: base.py  session.py
src/enums/: enums.py
src/news_crawler/: __init__.py  base.py  hangyung.py  hankyung.py  main.py  yna_news.py
src/newtyper/: data_manager.py  main.py
