[tool.poetry]
name = "newstyper"
version = "0.1.0"
description = ""
authors = ["Lee Hyun Jun <bhk0827@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
pyqt5 = "5.15.10"
requests = "2.31.0"
wpm = "1.51.5"
black = "^24.3.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
